--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,11 @@ body {
 #container {
   display: flex;
   flex-wrap: wrap;
-  width: 850px;
+  width: 832px;
   box-sizing: border-box;
 }
 
-.pixel-block {
+#container div {
   background-color: lightgrey;
   height: 50px;
   width: 50px;
