--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   background-color: lightblue;
 }
 
@@ -16,4 +17,9 @@ body {
   height: 50px;
   width: 50px;
   border: 1px solid black;
+}
+
+button {
+  margin: 25px 0px;
+  padding: 8px;
 }
