--- a/styles.css
+++ b/styles.css
@@ -7,19 +7,21 @@ body {
 
 #container {
   display: flex;
-  flex-wrap: wrap;
-  width: 832px;
   box-sizing: border-box;
+  flex-wrap: wrap;
+  width: 800px;
+  height: 800px;
+  border: 1px black solid;
+  background-color: rgb(235, 230, 230);
 }
 
-#container div {
-  background-color: lightgrey;
-  height: 50px;
-  width: 50px;
-  border: 1px solid black;
+.row {
+  display: flex;
+  width: 100%;
+  /* border: 1px black solid; */
 }
 
 button {
-  margin: 25px 0px;
+  margin: 25px 8px;
   padding: 8px;
 }
